# application_mantis

./: .gitignore  CMakeLists.txt  CMakePresets.json  FinishedProducts.h  ProcessFlow.h  README.md  Station.h  main  main.cpp
include/: FinishedProducts.h  ProcessFlow.h  Station.h
src/: FinishedProducts.cpp  ProcessFlow.cpp  Station.cpp  main.cpp
